<resources>
    <string name="app_name">MOTIVOO</string>
    <string name="application_terminate">\'뒤로\' 버튼 한 번 더 누르면 종료됩니다.</string>
    <string name="binding_error">에러가 발생했습니다</string>
    <string name="confirm">확인</string>
    <string name="allow">허용하기</string>
    <string name="withdrawal">탈퇴하기</string>

    <!--onboarding-->
    <string name="onboarding_descriprion_title">맞춤 운동을 위한\n질문을 준비중이에요</string>
    <string name="onboarding_descriprion">모든 정보는 수정이 어려워요!\n신중하게 입력해주세요.</string>
    <string name="nickname_title">별명을 알려주세요</string>
    <string name="nickname">별명</string>
    <string name="nickname_hint">별명을 입력해주세요</string>
    <string name="nickname_error">8자 이내로 입력해주세요.</string>
    <string name="age_question_title_first">당신은\n부모인가요 자녀인가요?</string>
    <string name="age_question_description_first">맞춤 운동을 제공해드려요!</string>
    <string name="age_question_title_second">나이를 알려주세요</string>
    <string name="age_question_description_second">맞춤 운동 추천을 위해 필요해요</string>
    <string name="onboarding_parent">부모</string>
    <string name="onboarding_chile">자녀</string>
    <string name="onboarding_age">나이</string>
    <string name="onboarding_hint">나이를 입력해주세요</string>
    <string name="onboarding_error_message">14세부터 99세까지 사용 가능해요.</string>
    <string name="onboarding_null_error_message">나이를 입력해주세요</string>
    <string name="onboarding_parent_or_child">부모 or 자녀</string>
    <string name="do_exercise_title">평소 운동을 하시나요?</string>
    <string name="do_exercise_yes">네</string>
    <string name="do_exercise_no">아니요</string>
    <string name="what_exercise_title">평소 하는 운동을 알려주세요</string>
    <string name="what_exercise_description">운동 강도에 따라 선택해주세요</string>
    <string name="hard_exercise_title">고강도 운동</string>
    <string name="hard_exercise_description">등산, 에어로빅, 크로스핏, 헬스 등</string>
    <string name="middle_exercise_title">중강도 운동</string>
    <string name="middle_exercise_description">빠르게 걷기, 골프, 필라테스 등</string>
    <string name="low_exercise_title">저강도 운동</string>
    <string name="low_exercise_description">걷기, 요가, 스트레칭 등</string>
    <string name="hard_activity_title">고강도 활동</string>
    <string name="hard_activity_description">무거운 물건 나르기, 육아 등</string>
    <string name="middle_activity_title">중강도 활동</string>
    <string name="middle_activity_description">가벼운 물건 나르기 등</string>
    <string name="low_activity_title">저강도 활동</string>
    <string name="low_activity_description">출퇴근, 가벼운 청소, 쇼핑 등</string>
    <string name="what_activity_title">자주 하는 활동을 알려주세요</string>
    <string name="what_activity_description">가장 많이 하는 활동을 기준으로 선택해주세요</string>
    <string name="frequency_exercise_title">일주일에 운동을\n몇 번 하시나요?</string>
    <string name="frequency_activity_title">해당 활동을 일주일에\n몇 번 하시나요?</string>
    <string name="frequency_under_one">1회 미만</string>
    <string name="frequency_one_to_three">1-2회</string>
    <string name="frequency_three_to_five">3-4회</string>
    <string name="frequency_over_five">5회 이상</string>
    <string name="time_under_thirty">30분 미만</string>
    <string name="time_thirty_to_one">30분 - 1시간</string>
    <string name="time_one_to_two">1시간 - 2시간</string>
    <string name="time_over_two">2시간 이상</string>
    <string name="time_exercise_title">하루에 몇 시간 정도\n운동하시나요?</string>
    <string name="time_activity_title">하루에 몇 시간 정도\n해당 활동을 하시나요?</string>
    <string name="sore_spot_title">평소 활동 중에 불편했거나\n걱정되는 곳을 선택해주세요</string>
    <string name="sore_spot_description">최대 3개까지 선택할 수 있어요</string>
    <string name="sore_spot_neck">목</string>
    <string name="sore_spot_shoulder">어깨</string>
    <string name="sore_spot_waist">허리</string>
    <string name="sore_spot_knee">무릎</string>
    <string name="sore_spot_wrist">손목</string>
    <string name="sore_spot_ankle">발목</string>

    <!-- home -->
    <string name="home_today_exercise_description">오늘 할 운동을 고르세요!</string>
    <string name="home_step_count">걸음 수</string>
    <string name="home_my_step_count">내 걸음</string>
    <string name="home_parent_step_count">부모님 걸음</string>
    <string name="home_child_step_count">자녀 걸음</string>
    <string name="home_today_exercise">오늘의 운동</string>
    <string name="home_exercise_method">운동 방법</string>
    <string name="home_exercise_percent">운동 달성률</string>
    <string name="home_verify_exercise">운동 인증하기</string>
    <string name="home_success">운동 완료</string>
    <string name="home_bottom_sheet_take_photo">사진 찍기</string>
    <string name="home_bottom_sheet_select_in_album">앨범에서 선택하기</string>
    <string name="home_child">자녀</string>
    <string name="home_parent">부모</string>
    <string name="home_success_hifive">하이파이브 성공!</string>
    <string name="verify_exercise">운동 인증이 완료되었어요!</string>
    <string name="verify_exercise_description">오늘도 멋지게 운동을 해내셨군요</string>
    <string name="home_exact_alarm_denied_reminder">자정마다 걸음 수를 초기화하려면 알림 및 리마인더를 허용해주세요.</string>
    <string name="home_setting">설정으로 이동</string>
    <string name="motivoo_logo">motivoo_logo</string>

    <!-- my page -->
    <string name="mypage_nickname">의지뿜뿜 부모님</string>
    <string name="mypage_nickname_child">행복팡팡 자녀</string>
    <string name="mypage_myinfo">내 정보</string>
    <string name="mypage_exercise_info">운동 정보</string>
    <string name="mypage_check_exercise_info">내 운동 정보를 확인하세요!</string>
    <string name="mypage_app_info">앱 정보</string>
    <string name="mypage_service_use">서비스 이용약관</string>
    <string name="mypage_privacy_policy">개인정보 처리방침</string>
    <string name="mypage_open_source">오픈소스 라이선스</string>
    <string name="mypage_version_info">버전 정보</string>
    <string name="mypage_version">v.</string>
    <string name="mypage_ask_kakao">문의하기</string>
    <string name="mypage_before">이전</string>
    <string name="mypage_age">나이</string>
    <string name="mypage_logout">로그아웃</string>
    <string name="mypage_out">회원탈퇴</string>
    <string name="mypage_out_content">탈퇴 시 모든 정보가 삭제됩니다.</string>
    <string name="mypage_exercise_or_not">운동 여부</string>
    <string name="mypage_exercise_intensity">운동 / 신체활동 강도</string>
    <string name="mypage_average_count">주 평균 횟수</string>
    <string name="mypage_average_time">하루 평균 시간</string>
    <string name="mypage_watch_out">주의할 곳</string>
    <string name="mypage_ask_service_out">정말 탈퇴하시겠어요?</string>
    <string name="mypage_service_out_content">회원 탈퇴 시 모든 정보가 삭제되며 복구가 불가능해요.</string>
    <string name="mypage_cancel">취소</string>
    <string name="mypage_logout_check">정말 로그아웃 하시겠어요?</string>
    <string name="mypage_look_more_info">모티부 더 알아보기</string>
    <string name="mypage_kakao_chat_link">https://open.kakao.com/o/sSCxapcg</string>

    <!-- notification -->
    <string name="step_count_notification_channel_id">step_count_channel</string>
    <string name="step_count_notification_channel_title">step_counter</string>
    <string name="step_count_notification_channel_name">step_count_name</string>
    <string name="notification_title">지금까지 %d걸음</string>
    <string name="notification_content">오늘의 운동을 완료하면 하이파이브를 할 수 있어요.</string>

    <!-- bottomNavigation -->
    <string name="home">홈</string>
    <string name="exercise">운동</string>
    <string name="my_page">마이</string>
    <string name="next">다음</string>

    <!--  permission  -->
    <string name="permission_back">이전</string>
    <string name="permission_title">접근 권한 안내</string>
    <string name="permission_description">원활한 이용을 위해\n다음 권한의 허용이 필요해요.</string>
    <string name="permission_essential">(필수)</string>
    <string name="permission_health_title">건강 및 피트니스</string>
    <string name="permission_health_description">건강 및 피트니스 앱으로 걸음수를 측정할게요</string>
    <string name="permission_camera_description">카메라 기능으로 운동을 인증할 수 있어요</string>
    <string name="permission_camera_title">카메라</string>
    <string name="permission_gallery_title">사진</string>
    <string name="permission_gallery_description">사진 기능으로 운동을 인증할 수 있어요</string>
    <string name="permission_caution">허용하지 않아도 앱을 이용할 수 있으나, 일부 서비스 이용이 제한될 수 있어요. 거부 후 설정에서 다시 허용할 수 있어요.</string>
    <string name="permission_denied_description">상대방과 내 걸음수를 보고싶다면\n권한을 허용해주세요!</string>

    <!-- invite code -->
    <string name="get_invite_code_title">함께 운동할 가족에게\n초대코드를 공유해주세요!</string>
    <string name="get_invite_code">초대코드</string>
    <string name="get_invite_code_copy">복사하기</string>
    <string name="get_invite_code_check_matching">매칭 확인하기</string>
    <string name="toast_waiting_matching">아직 매칭을 확인하고 있어요</string>
    <string name="post_invite_code_title">초대받은 코드를\n붙여넣거나 입력해주세요</string>
    <string name="post_invite_code_hint">초대코드를 입력해주세요</string>
    <string name="post_invite_code_error_message">초대코드가 올바르지 않아요</string>
    <string name="make_invite_code">초대코드 생성하기</string>
    <string name="post_invite_code">초대코드 입력하기</string>
    <string name="clipboard_copy">클립보드에 복사되었습니다</string>
    <string name="start_motivoo_or">or</string>
    <string name="motivoo_start">모티부 시작하기</string>

    <!-- exercise -->
    <string name="exercise_today_exercise">오늘의 운동</string>
    <string name="exercise_today_mission">8천걸음 걷고 \n스탠딩 랫폴다운 20번 하기</string>
    <string name="exercise_date">2023년 12월 25일 월요일</string>
    <string name="exercise_no_image_before_exercise">다음 운동은\n꼭 성공해요!</string>
    <string name="exercise_my_exercise">내 운동</string>
    <string name="exercise_parent_exercise">부모님 운동</string>
    <string name="exercise_no_image_before_exercise_today">운동을 완료하고 사진을 등록해보세요!</string>
    <string name="exercise_child_exercise">자녀 운동</string>
    <string name="exercise_empty_content">아직 완료한 운동이 없어요\n운동하고 나만의 앨범을 만들어봐요!</string>
    <string name="exercise_empty_button">오늘의 운동 하러가기</string>
    <string name="exercise_select_today_mission">오늘의 운동 선택하러가기</string>
    <string name="exercise_please_select_today_mission">오늘 할 운동을 선택하세요!</string>
    <string name="exercise_today_question_notice">운동 기록은 30일간 보관 후 사라져요!</string>
    <string name="exercise_our_exercise_history">우리들의 운동 기록</string>

    <!-- connection error -->
    <string name="connection_error_title">잠시 연결이 불안정해요</string>
    <string name="connection_error_content">조금 뒤 다시 접속해주세요.</string>
    <string name="connection_error_try_again">다시 시도하기</string>

    <!-- terms of use -->
    <string name="terms_title">이용약관</string>
    <string name="terms_all">약관 전체 동의</string>
    <string name="terms_of_use_access">이용약관 동의</string>
    <string name="terms_of_use_link"><u>보기</u></string>
    <string name="terms_get_info_access">개인정보수집 및 이용 동의</string>
    <string name="terms_use_info_access">개인정보 처리방침 동의</string>
    <string name="terms_of_use_lnk">https://gayeong04.notion.site/82b7d6d8cc3f4091aa0a3b41bbfc6c62?pvs=4</string>
    <string name="terms_of_get_info_lnk">https://gayeong04.notion.site/e85e6a92bcce43bbac61c0de4e79cd14?pvs=4</string>
    <string name="terms_of_use_info_lnk">https://gayeong04.notion.site/df1e215e4b2248d28a913ea27788a777?pvs=4</string>

    <!-- login -->
    <string name="login_kakao">카카오 로그인하기</string>
    <string name="motivoo_start_description">자녀님, 부모님을 초대하고\n함께 운동해봐요!</string>
    <string name="login_error_message">로그인을 다시 한 번 시도해주세요</string>
    <string name="yes">예</string>
    <string name="no">아니요</string>

    <!-- webview url-->
    <string name="service_use_url">https://gayeong04.notion.site/82b7d6d8cc3f4091aa0a3b41bbfc6c62?pvs=4</string>
    <string name="privacy_policy_url">https://gayeong04.notion.site/df1e215e4b2248d28a913ea27788a777?pvs=4</string>
    <string name="open_source_url">https://gayeong04.notion.site/c78b181acf8a41f28f2ed653db998650?pvs=4</string>
    <string name="developer_info_url">https://gayeong04.notion.site/39aa420262384587957479ca4da2ba2e?pvs=4</string>
    <string name="about_motivoo_url">https://gayeong04.notion.site/358b03942cc44923886c650ac4485c7b</string>

    <!-- withdrawal -->
    <string name="withdrawal_title">매칭이 끊어졌어요</string>
    <string name="withdrawal_desc">매칭이 끊어져 모티부를 이용할 수 없어요\n탈퇴 후 다시 가입해주세요</string>
    <string name="network_error_title">잠시 연결이 불안정해요</string>
</resources>
