<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
            name="onboardingViewModel"
            type="sopt.motivoo.presentation.onboarding.OnboardingViewModel" />


    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/tv_nickname_title"
            style="@style/H3_semi"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="51dp"
            android:text="@string/nickname_title"
            android:textColor="@color/gray_900_161616"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


        <TextView
            android:id="@+id/tv_nickname"
            style="@style/B6_re"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="44dp"
            android:text="@string/nickname"
            android:textColor="@color/gray_500_9D9EA0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_nickname_title" />

        <EditText
            android:id="@+id/et_nickname"
            style="@style/B6_re"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:layout_marginEnd="16dp"
            android:background="@drawable/selector_edittext_input"
            android:hint="@string/nickname_hint"
            android:imeOptions="actionDone"
            android:inputType="number"
            android:paddingHorizontal="20dp"
            android:paddingVertical="18dp"
            android:text="@={onboardingViewModel.nickName}"
            android:textColor="@color/gray_900_161616"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/tv_nickname"
            app:layout_constraintTop_toBottomOf="@+id/tv_nickname" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_nickname_done"
            style="@style/B5_med"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            android:layout_marginBottom="44dp"
            android:background="@drawable/selector_next_button_background"
            android:enabled="false"
            android:paddingVertical="18dp"
            android:stateListAnimator="@null"
            android:text="@string/next"
            android:textColor="@drawable/selector_text_color"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>