<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="getInviteCodeViewModel"
            type="sopt.motivoo.presentation.invitecode.GetInviteCodeViewModel" />

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".presentation.invitecode.GetInviteCodeFragment">

        <include
            android:id="@+id/include_get_invite_code_toolbar"
            layout="@layout/view_onboarding_toolbar"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_get_invite_code_description"
            style="@style/H4_semi"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:gravity="center"
            android:text="@string/get_invite_code_title"
            android:textColor="@color/gray_900_161616"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/include_get_invite_code_toolbar" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/cl_get_invite_code"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            android:layout_marginTop="32dp"
            android:background="@drawable/shape_get_invite_code_radius8"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_get_invite_code_description">

            <TextView
                android:id="@+id/tv_get_invite_code_title"
                style="@style/B6_re"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="29dp"
                android:text="@string/get_invite_code"
                android:textColor="@color/gray_600_707276"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tv_get_invite_code"
                style="@style/Code_med"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:text="@{getInviteCodeViewModel.inviteCode}"
                android:textColor="@color/black_090909"
                app:layout_constraintEnd_toEndOf="@+id/tv_get_invite_code_title"
                app:layout_constraintStart_toStartOf="@+id/tv_get_invite_code_title"
                app:layout_constraintTop_toBottomOf="@+id/tv_get_invite_code_title"
                tools:text="81dc24gd0" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btn_get_invite_code_copy"
                style="@style/H7_semi"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="54dp"
                android:layout_marginTop="34dp"
                android:layout_marginBottom="24dp"
                android:background="@drawable/shape_get_invite_code_copy_button_radius8"
                android:paddingVertical="19dp"
                android:text="@string/get_invite_code_copy"
                android:textColor="@color/white_FFFFFF"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_get_invite_code" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <TextView
            android:id="@+id/tv_get_invite_code_matching_waiting"
            style="@style/Caption1_semi"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="12dp"
            android:text="@string/toast_waiting_matching"
            android:textColor="@color/red_500_FF473C"
            android:visibility="gone"
            app:layout_constraintBottom_toTopOf="@+id/btn_get_invite_code_check_matching"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/tv_get_invite_code_toast"
            style="@style/Caption2_re"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="12dp"
            android:background="@drawable/shape_custom_toast"
            android:paddingHorizontal="24dp"
            android:paddingVertical="13dp"
            android:text="@string/clipboard_copy"
            android:textColor="@color/white_FFFFFF"
            android:visibility="gone"
            app:layout_constraintBottom_toTopOf="@+id/btn_get_invite_code_check_matching"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_get_invite_code_check_matching"
            style="@style/B5_med"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            android:layout_marginBottom="44dp"
            android:background="@drawable/selector_next_button_background"
            android:paddingVertical="18dp"
            android:stateListAnimator="@null"
            android:text="@string/get_invite_code_check_matching"
            android:textColor="@drawable/selector_text_color"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>