<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white_FFFFFF"
        tools:context=".presentation.withdrawal.WithdrawalFragment">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            android:layout_marginTop="6dp"
            android:backgroundTint="@null"
            android:gravity="center"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:id="@+id/iv_withdrawal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:backgroundTint="@null"
                android:contentDescription="@null"
                android:src="@drawable/ic_unconnection" />

            <TextView
                android:id="@+id/tv_withdrawal_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:gravity="center"
                android:paddingVertical="5dp"
                android:text="@string/withdrawal_title"
                android:textAppearance="@style/H4_semi"
                android:textColor="@color/gray_900_161616" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:gravity="center"
                android:paddingTop="5dp"
                android:paddingBottom="4dp"
                android:text="@string/withdrawal_desc"
                android:textAppearance="@style/B6_re"
                android:textColor="@color/gray_600_707276" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btn_withdrawal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="100dp"
                android:background="@drawable/shape_rectangle_radius8"
                android:backgroundTint="@color/black_090909"
                android:paddingTop="19dp"
                android:paddingBottom="18dp"
                android:stateListAnimator="@null"
                android:text="@string/withdrawal"
                android:textAppearance="@style/B5_med"
                android:textColor="@color/white_FFFFFF" />

        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>